--- a/web/src/style/color/palette.css
+++ b/web/src/style/color/palette.css
@@ -1,4 +1,3 @@
-/* [{"name":"TouhouCloud","id":1756338344576,"gamut":"srgb","tones":["100","200","300","400","500","600","700","800","900"],"hues":[{"name":"Slate","colors":["#f3f4f5","#e8eaed","#d5d7db",{"mode":"oklrchx","l":0.7873934202985255,"c":0.007899272949986273,"h":259.4208543232576},{"mode":"oklrchx","l":0.6712006596315496,"c":0.01094671566010354,"h":262.4793402784019},{"mode":"oklrchx","l":0.5359491652750908,"c":0.01314633507590618,"h":264.45073431066317},{"mode":"oklrchx","l":0.3938632475433994,"c":0.01293713357898264,"h":266.9000003846686},"#3a3d44","#1b1e25"]},{"name":"Reimu","colors":["#fff0ef",{"mode":"oklrchx","l":0.9205309572739141,"c":0.029990147890814434,"h":22.799374152014536},"#ffcac6","#ff9e99","#f87572","#db464c","#a82f33",{"mode":"oklrchx","l":0.26844109714549225,"c":0.11120710442192447,"h":24.890457964281495},{"mode":"oklrchx","l":0.13819677731289837,"c":0.07294583638229926,"h":29.050964800470354}]},{"name":"Blue","colors":["#edf4ff","#deeaff","#c4d9fd","#96baff","#719cfb","#4e76e2","#2755c7","#06328c","#011446"]},{"name":"Marisa","colors":["#fbf3d1","#f7eab8",{"mode":"oklrchx","l":0.8604612263445743,"c":0.08182288013950664,"h":90.11242128854212},{"mode":"oklrchx","l":0.7513076607040653,"c":0.10050069566832386,"h":83.6533377032348},{"mode":"oklrchx","l":0.6690781870997351,"c":0.10766797840909582,"h":81.10213777491049},{"mode":"oklrchx","l":0.5378032613446195,"c":0.11125174833365865,"h":80.56801425400965},{"mode":"oklrchx","l":0.42857426274439536,"c":0.09237763256226172,"h":77.14259075820667},{"mode":"oklrchx","l":0.27417090616560147,"c":0.0679056727849513,"h":76.02949192314304},{"mode":"oklrchx","l":0.11981004628912384,"c":0.038944774247541135,"h":75.85826870857358}]},{"name":"Green","colors":["#dcfce6","#c0f6d2","#92eaad","#62cf7d","#2fb459","#00903a","#006b28","#004616",{"mode":"oklrchx","l":0.11515561853357359,"c":0.07094154149807061,"h":146.94884813906395}]}]}] */
 @theme {
 	--color-*: initial;
 	--color-white: white;
@@ -19,8 +18,8 @@
 	--color-reimu-200: #fce1df;
 	--color-reimu-300: #ffcac6;
 	--color-reimu-400: #ff9e99;
-	--color-reimu-500: #f87572;
-	--color-reimu-600: #db464c;
+	--color-reimu-500: #fe7475;
+	--color-reimu-600: #ea575c;
 	--color-reimu-700: #a82f33;
 	--color-reimu-800: #6f1c1b;
 	--color-reimu-900: #3d0c07;
